# Resume_Web_Creater

./: Cargo.toml  LICENSE  README.md  resume_example.toml
src/: logger.rs  main.rs  reader.rs  resume.rs
