[package]
name = "resume_web_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "std", "cargo"] }
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["std"] }
serde = "1.0.152"
serde_derive = "1.0.152"
toml = "0.5.10"
